--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="style.css">
-    <title>Chronometer</title>
+    <title>Chronometer | PouletEnSlip</title>
 </head>
 <body>
     <h1>Chronometer</h1><br><br>
     <div id="chrono">00:00:00</div><br><br>
     <button class="bouton" onclick="startTimer()">START</button><br><br>
     <button class="bouton" onclick="stopTimer()">STOP</button><br><br>
-    <button class="bouton" onclick="resetTimer()">RESET</button>
+    <button class="bouton" onclick="resetTimer()">RESET</button><br><br>
+    <a href="../">&#x2190;</a>
 </body>
 <script src="script.js"></script>
 </html>
