--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 	<h1><a href="../">&#x2190;</a> Chronometer</h1>
 	<div id="chrono">00:00:00</div><br><br>
-	<button class="bouton" onclick="startTimer()">START</button><br><br>
-	<button class="bouton" onclick="stopTimer()">STOP</button><br><br>
-	<button class="bouton" onclick="resetTimer()">RESET</button><br><br><br>
+	<button type="button" class="bouton" onclick="startTimer()">START</button><br><br>
+	<button type="button" class="bouton" onclick="stopTimer()">STOP</button><br><br>
+	<button type="button" class="bouton" onclick="resetTimer()">RESET</button><br><br><br>
 	<script src="script.js"></script>
 </body>
 </html>
